--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,9 +1,17 @@
 body {
-  font-family: 'Fredoka', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background-color: var(--main-color);
   padding: 0;
   margin: 0;
   text-decoration: none;
+}
+
+a {
+  color: black;
+}
+
+a:hover {
+  color: #000000;
 }
 
 html {
@@ -46,7 +54,7 @@ html {
 
 .navbar {
   background-color: var(--header-color);
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+  width: auto;
 }
 
 .dropdown-item:hover,
@@ -88,7 +96,6 @@ html {
   font-family: var(--main-font);
   font-size: 70px;
   font-weight: bold;
-  text-shadow: 0 2px 3px rgb(87, 87, 87);
   text-align: center;
   margin-top: 2rem;
   cursor: default;
@@ -99,7 +106,6 @@ html {
   position: relative;
   color: var(--text-color);
   text-align: center;
-  text-shadow: 0 1px 1px rgb(87, 87, 87);
   padding-bottom: 5rem;
   font-family: 'Roboto Mono', monospace;
   z-index: -1;
@@ -111,7 +117,7 @@ html {
   background-color: black;
   content: '';
   display: inline-block;
-  height: 2px;
+  height: 1px;
   position: relative;
   vertical-align: middle;
   width: 50%;
@@ -143,7 +149,24 @@ form {
 
 input,
 textarea {
-  box-shadow: 6px 3px 11px 0px #797979;
+  border: 2px solid black;
+}
+
+textarea:hover,
+input:hover,
+textarea:active,
+input:active,
+textarea:focus,
+input:focus,
+button:focus,
+button:active,
+button:hover,
+label:focus,
+.btn:active,
+.btn.active {
+  outline: 0px !important;
+  -webkit-appearance: none;
+  box-shadow: none !important;
 }
 
 .fale-comigo {
@@ -166,10 +189,9 @@ button[type='submit']:hover {
 }
 
 .myButton {
-  box-shadow: 3px 1px 11px 0px #050505;
   background-color: #ffffff;
   border-radius: 28px;
-  border: none;
+  border: 2px solid black;
   display: inline-block;
   cursor: pointer;
   color: #000000;
@@ -200,7 +222,7 @@ button[type='submit']:hover {
 .container-2 {
   min-height: 100vh;
   background: white;
-  padding: 3rem;
+  padding: 2rem;
   border-top: 2px solid rgba(0, 0, 0, 0.897);
   border-bottom: 2px solid rgba(0, 0, 0, 0.897);
 }
@@ -210,8 +232,7 @@ button[type='submit']:hover {
   max-height: 16rem;
 }
 
-.card {
-  box-shadow: 1px 4px 20px 0px #929292;
+.cartao {
   border: 2px solid rgba(0, 0, 0, 0.897);
   -webkit-transition: all 0.3s 0s ease;
   -moz-transition: all 0.3s 0s ease;
@@ -219,18 +240,61 @@ button[type='submit']:hover {
   transition: all 0.3s 0s ease;
 }
 
-.card:hover {
-  transform: scale(1.05);
+.cartao:hover {
+  transform: scale(1.02);
 }
 
 .header2 {
   text-align: center;
   margin-bottom: 2rem;
   color: black;
-  text-shadow: 1px 1px 11px rgba(150, 150, 150, 1);
 }
 
 .container-3 {
   min-height: 100vh;
   background: white;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  justify-content: space-evenly;
+  padding-top: 10rem;
+}
+
+.container-3 a {
+  height: 50%;
+}
+
+.btn-link {
+  color: black;
+}
+
+.btn-link:hover,
+.btn-link:active,
+.btn-link:focus {
+  color: #797979;
+  text-decoration: none;
+}
+
+.icon {
+  width: 10rem;
+  height: 10rem;
+  transition-duration: 0.2s;
+}
+
+.icon:hover {
+  color: #818181;
+}
+
+#back-btn {
+  width: 3rem;
+  height: 3rem;
+}
+
+.align {
+  display: grid;
+  place-items: center;
+}
+
+footer {
+  text-align: center;
 }
